manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  timeapi
  namespace: default
  labels:
    app:  timeapi
spec:
  selector:
    matchLabels:
      app: timeapi
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  timeapi
    spec:
      containers:
      - name:  timeapi
        image:  oluchioraekwe/timeapi:V.1.0
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  4500
