manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeapisvc
  namespace: default
spec:
  selector:
    app: timeapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4500
